# dj-banger

./: .gitignore  OPTIONS.md  README.md  package.json  start.sh  tsconfig.json
app/: README.md  bridge.mjs  package-lock.json  package.json  release.sh  stage-sidecar.sh
app/public/: app.js  index.html  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns  make-icon.mjs
app/src-tauri/src/: lib.rs  main.rs
src/: affinity.ts  analyzeCli.ts  camelot.ts  cli.ts  dedupe.ts  deezerSimilarity.ts  dnp.ts  energy.ts  engine.ts  live.ts  liveCli.ts  types.ts
src/analysis/: analyze.ts  applyEnergy.ts  energyStore.ts
src/serato/: crateWriter.ts  history.ts  library.ts  parser.ts
src/streaming/: apple.ts  common.ts  index.ts  spotify.ts  tidal.ts
test/: engine.test.ts  phase3.test.ts  serato.test.ts
