[package]
name = "banger"
version = "0.1.0"
description = "dj-banger floating window"
edition = "2021"
rust-version = "1.77"

[lib]
name = "banger_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Transparent + always-on-top window needs the macos-private-api feature on macOS.
tauri = { version = "2", features = ["macos-private-api"] }
# Drag a real file OUT of the window into Serato (native OS drag-and-drop).
tauri-plugin-drag = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
